Profile bar created and styled, header navigation alignment correcte so it matches the profile bar

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -50,7 +50,7 @@ body, html{
 
 /* Notification symbol */
 #notifications{
-    margin-left: 7vw;
+    margin-left: auto;
 }
 
 /* Profil picture */
@@ -60,13 +60,20 @@ body, html{
     border-radius: 50px;
 }
 
+#username{
+    margin-right: 2vw;
+}
+
 
 /* Header profile bar */
 
 #header-profile{
-    background-color: blue;
+    background-color: white;
     grid-column: 2 / 5;
     grid-row: 2 / 2;
+    display: flex;
+    align-items: center;
+    padding-bottom: 3vh;
 }
 
 /* Profile picture */
@@ -74,8 +81,41 @@ body, html{
     height: 8vw;
     width: 8vw;
     border-radius: 50px;
+    margin-left: 3vw;
+    margin-right: 1vw;
 }
 
+/* Welcome text */
+#welcome-text{
+    padding: 0;
+    margin: 0;
+    line-height: 0;
+}
+
+#welcome-text p{
+    font-size: clamp(8px, 1.5vw, 14px);
+}
+
+#welcome-text h4{
+    font-size: clamp(11px, 2.2vw, 18px);
+}
+
+/* Action buttons */
+
+#action-buttons{
+    margin-left: auto;
+    justify-content:flex-end;
+    margin-right: 2vw;
+}
+
+#action-buttons button{
+    border-radius: 20px;
+    border: none;
+    padding:0.8vw 1.2vw 0.8vw 1.2vw;
+    font-size: 0.6em;
+    background-color: rgb(35, 139, 208);
+    color: white;
+}
 
 /* Sidebar menu */
 #sidebar{
